manage-items init

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
       <span>EtonDigital</span>
     </a>
     <li routerLinkActive="active" class="nav-link">
-      <a routerLink="/manage-items">Manage items</a>
+      <a routerLink="/manage-items/new">New item</a>
     </li>
   </div>
   <div class="nav-side">
