--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,1 +1,43 @@
-<p>cart works!</p>
+<div class="cart-list">
+  <!-- cart card should have it's own component, for state & 
+    removal confirmation 
+    maybe add counter to the item object?-->
+  <div class="cart-card" *ngFor="let item of cartItems">
+    <div class="cart-card__img">
+      <img [src]="item.image" [alt]="item.title + item.id" />
+    </div>
+
+    <div class="cart-card__label">
+      <div class="cart-card__row">
+        <div class="title">{{ item.title }}</div>
+        <div class="cart-card__control close">
+          <!-- onClick={() => this.confirmRemoval()} -->
+          <!-- <FaWindowClose /> -->
+          X
+        </div>
+      </div>
+      <div class="cart-card__row">
+        <div class="cart-card__price">
+          <div class="price">{{ item.price }}$</div>
+          <!-- <div class="count">{counter > 1 && " x " + counter}</div> -->
+        </div>
+        <div class="cart-card__controls">
+          <div class="cart-card__control">
+            <!-- onClick={() => counterMinus(id)} -->
+            <!-- <FaRegMinusSquare /> -->
+            -
+          </div>
+          <div class="cart-card__control">
+            <!-- onClick={() => counterPlus(id)}
+            <FaRegPlusSquare /> -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <hr />
+  <button class="cart-buy">
+    <p>BUY</p>
+  </button>
+</div>
