--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -2,12 +2,21 @@
   <div class="shop-card" *ngFor="let item of shopItems">
     <div class="shop-card__img">
       <img [src]="item.image" [alt]="item.title" />
+      <button class="shop-card__edit-btn" (click)="onEditItem(item)">
+        edit
+      </button>
     </div>
-    <div class="shop-card__title">{{ item.title }}</div>
-    <div class="shop-card__price">{{ item.price }}</div>
-    <div class="shop-card__description">{{ item.description }}</div>
-    <button class="shop-card__btn" (click)="addToCard(item)">
-      Add to Card
-    </button>
+    <div class="shop-card__info">
+      <div class="shop-card__label">
+        <div class="shop-card__title">{{ item.title }}</div>
+        <div class="shop-card__price">{{ item.price }}$</div>
+      </div>
+      <div class="shop-card__description">{{ item.description }}</div>
+      <button class="shop-card__btn" (click)="onAddToCard(item)">
+        <p>Add to Card</p>
+      </button>
+    </div>
   </div>
 </div>
+
+<app-loading-animation *ngIf="loading"> </app-loading-animation>
