--- a/src/app/shop/shop.component.scss
+++ b/src/app/shop/shop.component.scss
@@ -1,3 +1,5 @@
+@import "./src/styles/variables.scss";
+
 .shop-list {
   display: grid;
   gap: 1em;
@@ -5,7 +7,84 @@
 }
 
 .shop-card {
-  &__img img {
+  position: relative;
+  border-radius: $border-radius;
+  overflow: hidden;
+  background: white;
+  height: 380px;
+
+  box-shadow: 0 0.1em 0.3em rgba($black, 0.5);
+
+  &__img {
+    overflow: hidden;
+    height: 45%;
+    img {
+      //mora da se doradi
+      min-height: 170px;
+      width: 100%;
+    }
+  }
+
+  &__info {
+    height: 55%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 1em;
+  }
+
+  &__label {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-weight: bold;
+  }
+
+  &__title {
+    font-size: 1.5em;
+  }
+  &__price {
+    color: $accent1;
+    font-size: 1.7em;
+  }
+  &__description {
+    padding: 1em 0;
+  }
+
+  &__btn {
     width: 100%;
+    padding: 0.5em;
+    border-radius: $border-radius;
+    border: none;
+    outline: none;
+    cursor: pointer;
+
+    background: $accent2;
+    color: $white;
+    p {
+      margin: 0;
+      font-weight: bold;
+    }
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    &:active {
+      box-shadow: inset 0.5em 0.5em 0.5em rgba($black, 0.3);
+      p {
+        transform: translate(2px, 2px);
+      }
+    }
+    &:hover {
+      background: lighten($accent2, 5%);
+    }
+  }
+
+  &__edit-btn {
+    position: absolute;
+    top: 1em;
+    right: 1em;
   }
 }
