--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -8,6 +8,9 @@ footer {
   height: 50px;
   background: linear-gradient(to right, $accent1, $accent2);
   color: $white;
+  p {
+    margin: 0;
+  }
   a {
     color: $white;
     text-decoration: none;
