--- a/src/app/manage-items-base/manage-items/manage-items.component.html
+++ b/src/app/manage-items-base/manage-items/manage-items.component.html
@@ -1,5 +1,80 @@
-<button>{{ editMode ? "Change item" : "Add new item" }}</button>
-<p>manage-items works! form needed! item.id = {{ id || "new" }}</p>
+<div class="row">
+  <div class="col-xs-12 form-container">
+    <form (ngSubmit)="onSubmit()" #f="ngForm">
+      <div class="row mx-auto">
+        <div class="col-sm-5 form-group">
+          <label for="title">Title</label>
+          <input
+            type="text"
+            id="title"
+            class="form-control"
+            ngModel
+            name="title"
+            required
+          />
+        </div>
+        <div class="col-sm-2 form-group">
+          <label for="price">Price</label>
+          <input
+            type="text"
+            id="price"
+            class="form-control"
+            ngModel
+            name="price"
+            required
+            pattern="^[1-9]+[0-9]*"
+          />
+        </div>
+        <div class="col-sm-7 form-group">
+          <label for="description">Description</label>
+          <input
+            type="text"
+            id="description"
+            class="form-control"
+            ngModel
+            name="description"
+            required
+          />
+        </div>
+        <div class="col-sm-7 form-group">
+          <label for="image">Image URL</label>
+          <input
+            type="text"
+            id="image"
+            class="form-control"
+            ngModel
+            name="image"
+            required
+          />
+        </div>
+      </div>
 
+      <div class="row mx-auto ">
+        <div class="col-xs-7 ml-3">
+          <button
+            class="btn btn-primary mr-1"
+            type="submit"
+            [disabled]="!f.valid"
+          >
+            {{ editMode ? "Update" : "Add" }}
+          </button>
+          <button
+            class="btn btn-danger mr-1"
+            type="button"
+            *ngIf="editMode"
+            (click)="onDelete()"
+          >
+            Delete
+          </button>
+          <button class="btn btn-secondary mr-1" (click)="onCancel()">
+            Cancel
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
 <hr />
-<button (click)="addBlankProduct()">Add Blank Product</button>
+<button class="btn btn-warning" (click)="addTestProduct()">
+  Add Test Product
+</button>
