--- a/src/app/shop/shop.component.scss
+++ b/src/app/shop/shop.component.scss
@@ -26,10 +26,11 @@
   }
 
   &__info {
+    position: relative;
     height: 55%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     padding: 1em;
   }
 
@@ -48,7 +49,8 @@
     font-size: 1.7em;
   }
   &__description {
-    padding: 1em 0;
+    padding: 0.5em 0;
+    flex-grow: 1;
   }
 
   &__btn {
