--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,43 +1,50 @@
-<div class="cart-list">
-  <!-- cart card should have it's own component, for state & 
-    removal confirmation 
-    maybe add counter to the item object?-->
-  <div class="cart-card" *ngFor="let item of cartItems">
-    <div class="cart-card__img">
-      <img [src]="item.image" [alt]="item.title + item.id" />
+<div class="row">
+  <div class="cart-list col-md-10   mx-auto">
+    <!-- cart card should have it's own component, for state & 
+      removal confirmation 
+      maybe add counter to the item object?-->
+    <div class="cart-card" *ngFor="let item of cartItems; let i = index">
+      <div class="cart-card__img">
+        <img [src]="item.image" [alt]="item.title + item.id" />
+      </div>
+
+      <div class="cart-card__label">
+        <div class="cart-card__row">
+          <div class="title">{{ item.title }}</div>
+          <button class="cart-card__control close" (click)="remove(i)">
+            X
+          </button>
+        </div>
+        <div class="cart-card__row">
+          <div class="cart-card__price">
+            <div class="price">{{ item.price }}$</div>
+            <div class="count">
+              {{ item.counter > 1 ? " x " + item.counter : "" }}
+            </div>
+          </div>
+          <div class="cart-card__controls">
+            <button
+              class="cart-card__control"
+              (click)="decrement(i)"
+              [disabled]="item.counter < 2"
+            >
+              -
+            </button>
+            <button class="cart-card__control" (click)="increment(i)">
+              +
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
 
-    <div class="cart-card__label">
-      <div class="cart-card__row">
-        <div class="title">{{ item.title }}</div>
-        <div class="cart-card__control close">
-          <!-- onClick={() => this.confirmRemoval()} -->
-          <!-- <FaWindowClose /> -->
-          X
-        </div>
-      </div>
-      <div class="cart-card__row">
-        <div class="cart-card__price">
-          <div class="price">{{ item.price }}$</div>
-          <!-- <div class="count">{counter > 1 && " x " + counter}</div> -->
-        </div>
-        <div class="cart-card__controls">
-          <div class="cart-card__control">
-            <!-- onClick={() => counterMinus(id)} -->
-            <!-- <FaRegMinusSquare /> -->
-            -
-          </div>
-          <div class="cart-card__control">
-            <!-- onClick={() => counterPlus(id)}
-            <FaRegPlusSquare /> -->
-          </div>
-        </div>
-      </div>
+    <hr />
+    <div class="cart-total">
+      <div class="cart-total-text">Total:</div>
+      <div class="cart-total-price">{{ totalPrice().toFixed(2) }} $</div>
     </div>
+    <button class="cart-buy">
+      <p>BUY</p>
+    </button>
   </div>
-
-  <hr />
-  <button class="cart-buy">
-    <p>BUY</p>
-  </button>
 </div>
