--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -1,4 +1,4 @@
-<div class="shop-list">
+<div class="shop-list mx-auto">
   <div class="shop-card" *ngFor="let item of shopItems">
     <div class="shop-card__img">
       <img [src]="item.image" class="img" [alt]="item.title" />
