--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -2,6 +2,7 @@
 
 .cart-list {
   user-select: none;
+  max-width: 900px;
   hr {
     margin: 1em 0;
   }
@@ -108,6 +109,22 @@
 //     }
 //   }
 // }
+
+.cart-total {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 2.2em;
+
+  .cart-total-text {
+    color: rgba($black, 0.7);
+  }
+  .cart-total-price {
+    color: $accent1;
+    font-weight: bold;
+  }
+}
 
 .cart-buy {
   width: 100%;
