--- a/src/app/manage-items-base/manage-items/manage-items.component.html
+++ b/src/app/manage-items-base/manage-items/manage-items.component.html
@@ -1,8 +1,8 @@
-<div class="row">
-  <div class="col-xs-12 form-container">
+<div class="row ">
+  <div class="col-sm-7 mx-auto">
     <form (ngSubmit)="onSubmit()" #f="ngForm">
-      <div class="row mx-auto">
-        <div class="col-sm-5 form-group">
+      <div class="row ">
+        <div class="col-sm-9 form-group">
           <label for="title">Title</label>
           <input
             type="text"
@@ -13,7 +13,7 @@
             required
           />
         </div>
-        <div class="col-sm-2 form-group">
+        <div class="col-sm-3 form-group">
           <label for="price">Price</label>
           <input
             type="text"
@@ -25,7 +25,7 @@
             pattern="^[1-9]+[0-9]*"
           />
         </div>
-        <div class="col-sm-7 form-group">
+        <div class="col-sm-12 form-group">
           <label for="description">Description</label>
           <input
             type="text"
@@ -36,7 +36,7 @@
             required
           />
         </div>
-        <div class="col-sm-7 form-group">
+        <div class="col-sm-12 form-group">
           <label for="image">Image URL</label>
           <input
             type="text"
@@ -45,36 +45,47 @@
             ngModel
             name="image"
             required
+            #image
           />
+        </div>
+        <div class="col-sm-12 ">
+          <img class="image" [src]="image.value" />
         </div>
       </div>
 
-      <div class="row mx-auto ">
-        <div class="col-xs-7 ml-3">
+      <div class="row  ">
+        <div class="col-xs-12 ml-3">
           <button
-            class="btn btn-primary mr-1"
+            class="my-btn btn-purple mr-1"
             type="submit"
             [disabled]="!f.valid"
           >
             {{ editMode ? "Update" : "Add" }}
           </button>
           <button
-            class="btn btn-danger mr-1"
+            class="my-btn btn-pink mr-1"
             type="button"
             *ngIf="editMode"
             (click)="onDelete()"
           >
             Delete
           </button>
-          <button class="btn btn-secondary mr-1" (click)="onCancel()">
+          <button class="my-btn btn-secondary mr-1" (click)="onCancel()">
             Cancel
+          </button>
+        </div>
+      </div>
+      <div class="row ">
+        <div class="col-xs-12 ml-3">
+          <button
+            class="btn btn-warning mt-1"
+            type="button"
+            (click)="addTestProduct()"
+          >
+            Add Test Product
           </button>
         </div>
       </div>
     </form>
   </div>
 </div>
-<hr />
-<button class="btn btn-warning" (click)="addTestProduct()">
-  Add Test Product
-</button>
