--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -17,23 +17,23 @@ $screen-padding-xs: 0 1em;
 $screen-padding-sm: 0 3em;
 $screen-padding-xlg: 0 calc((100vw - 1200px) / 2);
 
-// @mixin sm-screen {
-//   @media (min-width: 420px) {
-//     @content;
-//   }
-// }
+@mixin sm-screen {
+  @media (min-width: 600px) {
+    @content;
+  }
+}
 
-// @mixin md-screen {
-//   @media (min-width: 600px) {
-//     @content;
-//   }
-// }
+@mixin md-screen {
+  @media (min-width: 900px) {
+    @content;
+  }
+}
 
-// @mixin lg-screen {
-//   @media (min-width: 850px) {
-//     @content;
-//   }
-// }
+@mixin lg-screen {
+  @media (min-width: 1200px) {
+    @content;
+  }
+}
 
 // @mixin xlg-screen {
 //   @media (min-width: 1300px) {
