--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,8 +1,5 @@
 <div class="row">
   <div class="cart-list col-md-10   mx-auto">
-    <!-- cart card should have it's own component, for state & 
-      removal confirmation 
-      maybe add counter to the item object?-->
     <div class="cart-card" *ngFor="let item of cartItems; let i = index">
       <div class="cart-card__img">
         <img [src]="item.image" [alt]="item.title + item.id" />
@@ -12,7 +9,7 @@
         <div class="cart-card__row">
           <div class="title">{{ item.title }}</div>
           <button class="cart-card__control close" (click)="remove(i)">
-            X
+            <fa-icon [icon]="faWindowClose"></fa-icon>
           </button>
         </div>
         <div class="cart-card__row">
@@ -28,22 +25,20 @@
               (click)="decrement(i)"
               [disabled]="item.counter < 2"
             >
-              -
+              <fa-icon [icon]="faMinusSquare"></fa-icon>
             </button>
-            <button class="cart-card__control" (click)="increment(i)">
-              +
+            <button class="cart-card__control ml-1" (click)="increment(i)">
+              <fa-icon [icon]="faPlusSquare"></fa-icon>
             </button>
           </div>
         </div>
       </div>
     </div>
-
-    <hr />
     <div class="cart-total">
       <div class="cart-total-text">Total:</div>
       <div class="cart-total-price">{{ totalPrice().toFixed(2) }} $</div>
     </div>
-    <button class="cart-buy">
+    <button (click)="onBuy()" class="cart-buy">
       <p>BUY</p>
     </button>
   </div>
