--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -15,6 +15,8 @@
   align-items: center;
   height: 90px;
   margin-bottom: 1em;
+  border-bottom-left-radius: $border-radius;
+  border-bottom: 2px solid lightgrey;
 }
 
 .cart-card__img {
@@ -68,11 +70,22 @@
 }
 
 .cart-card__control {
+  padding: 0;
+  border: none;
+  background: none;
   font-size: 1.5em;
-  cursor: pointer;
   color: $accent2;
+  outline: none;
   &:active {
+    outline: none;
     transform: translate(1px, 1px);
+  }
+  &:disabled {
+    color: grey;
+    &:active {
+      outline: none;
+      transform: translate(0, 0);
+    }
   }
 }
 .cart-card__control.close {
