toastr notifications & loading animation

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -41,5 +41,6 @@
     <button (click)="onBuy()" class="cart-buy">
       <p>BUY</p>
     </button>
+    <app-loading-animation *ngIf="loading"> </app-loading-animation>
   </div>
 </div>
