--- a/src/app/loading-animation/loading-animation.component.scss
+++ b/src/app/loading-animation/loading-animation.component.scss
@@ -1,8 +1,39 @@
-.loading {
+.loader {
   pointer-events: none;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 5em;
+}
+
+.loader,
+.loader:after {
+  border-radius: 50%;
+  width: 10em;
+  height: 10em;
+}
+.loader {
+  margin: 60px auto;
+  font-size: 10px;
+  position: relative;
+  text-indent: -9999em;
+  border-top: 1.1em solid rgba(38, 4, 126, 0.2);
+  border-right: 1.1em solid rgba(38, 4, 126, 0.2);
+  border-bottom: 1.1em solid rgba(38, 4, 126, 0.2);
+  border-left: 1.1em solid #26047e;
+  transform: translateZ(0);
+  animation: load8 1.1s infinite linear;
+}
+@-webkit-keyframes load8 {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes load8 {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
