--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "./src/styles/variables.scss";
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
+@import "~ngx-toastr/toastr";
 
 body {
   font-family: sans-serif;
